# tree-sitter-doc_separator

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pnpm-lock.yaml  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-doc_separator.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_doc_separator/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterDocSeparator/: doc_separator.h
bindings/swift/TreeSitterDocSeparatorTests/: TreeSitterDocSeparatorTests.swift
src/: grammar.json  node-types.json  parser.c
